# noise-contour-mapper

./: .gitignore  LICENSE  Noise Contour Mapper - Installation Guide.docx  README.md  index.html  noise_model.py  package-lock.json  package.json
Projects/: noise-project_sample.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html
