[package]
name = "noise-contour-mapper"
version = "1.0.0"
description = "Spatial noise contour mapping from sound level meter measurements"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
